--- a/.gitconfig
+++ b/.gitconfig
@@ -65,3 +65,9 @@
 [pager]
 	branch = false
 
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
